--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -1,5 +1,4 @@
 $royal: #3B5998;
-$energized: #4285F4;
 $dark: #444444;
 $link-color: $dark;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
@@ -11,6 +10,28 @@ table, th, td {
 	border-bottom: 1px solid #ddd;
 	color: #444444;
 	font-size: 16px;
+}
+
+#chartjs-tooltip {
+	opacity: 0;
+	position: absolute;
+	background: rgba(0, 0, 0, .9);
+	color: white;
+	border-radius: 3px;
+	-webkit-transition: all .1s ease;
+	transition: all .1s ease;
+	pointer-events: none;
+	-webkit-transform: translate(-50%, 0);
+	transform: translate(-50%, 0);
+	font-size: 10px;
+}
+
+.chartjs-tooltip-key {
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	margin-right: 10px;
+	font-size: 10px;
 }
 
 .img_logo {
