--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -60,6 +60,15 @@ table, th, td {
 	margin: 0% auto;
 }
 
+.widget_title_half_50 {
+	width: 49% !important;
+	display: inline-block;
+}
+
+.widget_title_half_50_noninline {
+	width: 49% !important;
+}
+
 .widget_button {
 	width: 48% !important;
 	height: 65px;
