--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -64,6 +64,16 @@ table, th, td {
 	display: inline-block;
 }
 
+.widget_half {
+	width: 49% !important;
+	display: inline-block;
+}
+
+.widget_third {
+	width: 33% !important;
+	display: inline-block;
+}
+
 .widget_title_half_50_noninline {
 	width: 49% !important;
 }
